# Hand_Guesture_Control

./: README.md
dual_ur5/: CMakeLists.txt  package.xml
dual_ur5/launch/: view_dual_ur5.launch.py  view_ur.launch.py
dual_ur5/rviz/: dual_ur5_view.rviz
dual_ur5/urdf/: dual_ur5.urdf  dual_ur5.urdf.xacro  ur.urdf.xacro  ur_macro.xacro
dual_ur5_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
dual_ur5_moveit_config/config/: dual_ur5.ros2_control.xacro  dual_ur5.srdf  dual_ur5.urdf.xacro  initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  ros2_controllers.yaml
dual_ur5_moveit_config/launch/: demo.launch.py  dualtest.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
dual_ur5_moveit_config/urdf/: dual_ur5.urdf  dual_ur5.urdf.xacro  dual_ur5_gripper.xacro  ur.ros2_control.xacro  ur.urdf.xacro
hand_gesture_control/: CMakeLists.txt  package.xml  setup.py
hand_gesture_control/hand_gesture_control/: hand_gesture_publisher.py  hand_gesture_subscriber.py
hand_gesture_control/launch/: gesture_control_dual_ur5.launch.py
